[package]
name = "quote-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
interim = { version = "0.2.1", features = ["chrono_0_4"] }
notion-client = "1.0.10"
uuid = { version = "1.17.0", features = ["v4"] }
serde = "1.0.219"
serde_json = "1.0.141"
chrono-humanize = "0.2.3"
